# python-projects

./: README.md
database-research/Dataset_Entity_Extraction-master/: .gitignore  README.md  find_datasets.py  process_pubmed.py
database-research/pubmed_abstracts/: 40432072.txt  40432077.txt  40432082.txt  40432085.txt  40432086.txt  40432088.txt  40432090.txt  40432097.txt  40432108.txt  40432113.txt  (+8976 more)
law-and-llms/: README.md
literary-ai/: .gitignore  INSTRUCT.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  run_pipeline.sh
sports-ml-project/: README.md  cross_validation_results.csv  dataset_clean.ipynb  main.ipynb  matchups_full_2025.csv  summary_stats_by_label.csv
tracer/: Makefile  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml
tracer/api/: Dockerfile  pyproject.toml
tracer/api/app/: main.py  replay.py  websocket.py
tracer/api/app/background/: recorder.py
tracer/api/app/core/: config.py
tracer/api/app/crud/: __init__.py  base.py  crud_execution.py  crud_step_event.py  crud_workflow.py
tracer/api/app/db/: __init__.py  base_class.py  init_db.py  session.py
tracer/api/app/models/: execution.py  step_event.py  workflow.py
tracer/api/app/schemas/: execution.py  replay.py  step_event.py  workflow.py
tracer/api/app/v1/: router.py
tracer/api/app/v1/endpoints/: executions.py  replays.py  workflows.py
tracer/libs/sdk_py/: pyproject.toml
tracer/libs/sdk_py/tracelab_sdk/: __init__.py  patching.py  state.py
website-maker-backend/: .dockerignore  Dockerfile  hello.py  requirements.txt
(+2927 files in other folders)
